@@ -940,12 +940,12 @@ parameter_list|()
 throws|throws
 name|IOException
 function_decl|;
-comment|/**    * Expert: Returns a the root {@link IndexReaderContext} for this    * {@link IndexReader}'s sub-reader tree. Iff this reader is composed of sub    * readers ,ie. this reader being a composite reader, this method returns a    * {@link CompositeReaderContext} holding the reader's direct children as well as a    * view of the reader tree's atomic leaf contexts. All sub-    * {@link IndexReaderContext} instances referenced from this readers top-level    * context are private to this reader and are not shared with another context    * tree. For example, IndexSearcher uses this API to drive searching by one    * atomic leaf reader at a time. If this reader is not composed of child    * readers, this method returns an {@link AtomicReaderContext}.    *<p>    * Note: Any of the sub-{@link CompositeReaderContext} instances reference from this    * top-level context holds a<code>null</code> {@link CompositeReaderContext#leaves()}    * reference. Only the top-level context maintains the convenience leaf-view    * for performance reasons.    *     * @lucene.experimental    */
-DECL|method|getTopReaderContext
+comment|/**    * Expert: Returns the root {@link IndexReaderContext} for this    * {@link IndexReader}'s sub-reader tree.     *<p>    * Iff this reader is composed of sub    * readers, i.e. this reader being a composite reader, this method returns a    * {@link CompositeReaderContext} holding the reader's direct children as well as a    * view of the reader tree's atomic leaf contexts. All sub-    * {@link IndexReaderContext} instances referenced from this readers top-level    * context are private to this reader and are not shared with another context    * tree. For example, IndexSearcher uses this API to drive searching by one    * atomic leaf reader at a time. If this reader is not composed of child    * readers, this method returns an {@link AtomicReaderContext}.    *<p>    * Note: Any of the sub-{@link CompositeReaderContext} instances reference from this    * top-level context holds a<code>null</code> {@link CompositeReaderContext#leaves()}    * reference. Only the top-level context maintains the convenience leaf-view    * for performance reasons.    *     * @lucene.experimental    */
+DECL|method|getContext
 specifier|public
 specifier|abstract
 name|IndexReaderContext
-name|getTopReaderContext
+name|getContext
 parameter_list|()
 function_decl|;
 comment|/**    * Returns the reader's leaves, or itself if this reader is Atomic.    */
@@ -960,7 +960,7 @@ name|leaves
 parameter_list|()
 block|{
 return|return
-name|getTopReaderContext
+name|getContext
 argument_list|()
 operator|.
 name|leaves
