@@ -115,7 +115,7 @@ name|BytesRef
 import|;
 end_import
 begin_comment
-comment|/**  * Exposes flex API, merged from flex API of sub-segments.  * This is useful when you're interacting with an {@link  * IndexReader} implementation that consists of sequential  * sub-readers (eg {@link DirectoryReader} or {@link  * MultiReader}).  *  *<p><b>NOTE</b>: for composite readers, you'll get better  * performance by gathering the sub readers using  * {@link IndexReader#getTopReaderContext()} to get the  * atomic leaves and then operate per-AtomicReader,  * instead of using this class.  *  * @lucene.experimental  */
+comment|/**  * Exposes flex API, merged from flex API of sub-segments.  * This is useful when you're interacting with an {@link  * IndexReader} implementation that consists of sequential  * sub-readers (eg {@link DirectoryReader} or {@link  * MultiReader}).  *  *<p><b>NOTE</b>: for composite readers, you'll get better  * performance by gathering the sub readers using  * {@link IndexReader#getContext()} to get the  * atomic leaves and then operate per-AtomicReader,  * instead of using this class.  *  * @lucene.experimental  */
 end_comment
 begin_class
 DECL|class|MultiFields
