@@ -122,7 +122,7 @@ operator|.
 name|reader
 argument_list|()
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 specifier|final
