@@ -269,7 +269,7 @@ name|topReaderContext
 init|=
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 name|Comparator
