@@ -280,7 +280,7 @@ name|AtomicReaderContext
 operator|)
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 name|MockFilter
@@ -440,7 +440,7 @@ name|AtomicReaderContext
 operator|)
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 specifier|final
@@ -567,7 +567,7 @@ name|AtomicReaderContext
 operator|)
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 specifier|final
@@ -677,7 +677,7 @@ name|assertTrue
 argument_list|(
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 operator|instanceof
 name|AtomicReaderContext
@@ -691,7 +691,7 @@ name|AtomicReaderContext
 operator|)
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 specifier|final
