@@ -1429,7 +1429,7 @@ name|getIndexReader
 argument_list|()
 argument_list|)
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 name|NumericRangeFilter
