@@ -515,7 +515,7 @@ name|wrap
 argument_list|(
 name|indexReader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|stq
@@ -567,7 +567,7 @@ name|wrap
 argument_list|(
 name|indexReader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|stq
@@ -645,7 +645,7 @@ name|wrap
 argument_list|(
 name|indexReader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|sfq
@@ -743,7 +743,7 @@ name|wrap
 argument_list|(
 name|indexReader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|sfq
@@ -788,7 +788,7 @@ name|wrap
 argument_list|(
 name|indexReader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|sfq
@@ -983,7 +983,7 @@ name|wrap
 argument_list|(
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|snq
