@@ -450,7 +450,7 @@ name|assertTrue
 argument_list|(
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 operator|instanceof
 name|AtomicReaderContext
@@ -464,7 +464,7 @@ name|AtomicReaderContext
 operator|)
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 name|w
