@@ -407,7 +407,7 @@ name|getDocIdSet
 argument_list|(
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|reader
