@@ -5253,7 +5253,7 @@ name|random
 argument_list|,
 name|r
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|)
 decl_stmt|;
@@ -5422,7 +5422,7 @@ name|random
 argument_list|,
 name|r
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 argument_list|,
 name|ex
