@@ -2047,7 +2047,7 @@ name|topLevelContext
 init|=
 name|reader
 operator|.
-name|getTopReaderContext
+name|getContext
 argument_list|()
 decl_stmt|;
 name|OpenBitSet
